syntax = "proto3";

//can be omitted or a v1 namespace set
//option csharp_namespace = "gRPC.Demo";

//name of the package
//also the namespace for the generated code
package greet.v1;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
